[metadata]
name = ld-plot
version = 0.0.2.1
author = Nikita Konstantinovskiy
author_email = nikkonst@icloud.com
description = Plot Linkage Disequilibrium
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NikKonst/ld_plot
project_urls =
    Bug Tracker = https://github.com/NikKonst/ld_plot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src